build_full.txt
install
+- install abi
   +- compile exe abi Debug native 3 errors
src\shared\utils\config.zig:318:60: error: missing struct field: environ
            .io_backend = std.Io.Threaded.init(allocator, .{}),
                                                          ~^~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\Io\Threaded.zig:1188:25: note: struct declared here
pub const InitOptions = struct {
                        ^~~~~~
referenced by:
    runValidate: tools\cli\commands\config.zig:142:49
    run: tools\cli\commands\config.zig:30:24
    6 reference(s) hidden; use '-freference-trace=8' to see all references
src\tasks\persistence.zig:111:55: error: missing struct field: environ
    var io_backend = std.Io.Threaded.init(allocator, .{});
                                                     ~^~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\Io\Threaded.zig:1188:25: note: struct declared here
pub const InitOptions = struct {
                        ^~~~~~
src\tasks\persistence.zig:151:55: error: missing struct field: environ
    var io_backend = std.Io.Threaded.init(allocator, .{});
                                                     ~^~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\Io\Threaded.zig:1188:25: note: struct declared here
pub const InitOptions = struct {
                        ^~~~~~
error: 3 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2223+4f16e80ce\\zig.exe" build-exe -ODebug --dep abi --dep cli "-Mroot=C:\\Users\\donald\\abi\\tools\\cli\\main.zig" -ODebug --dep build_options "-Mabi=C:\\Users\\donald\\abi\\src\\abi.zig" -ODebug --dep abi "-Mcli=C:\\Users\\donald\\abi\\tools\\cli\\mod.zig" "-Mbuild_options=.zig-cache\\c\\c290e6efef1f57036e2411bdad41ddea\\options.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name abi --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2223+4f16e80ce\\lib\\" --listen=-

install
+- install abi-profile
   +- compile exe abi-profile ReleaseFast native 3 errors
src\shared\utils\config.zig:318:60: error: missing struct field: environ
            .io_backend = std.Io.Threaded.init(allocator, .{}),
                                                          ~^~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\Io\Threaded.zig:1188:25: note: struct declared here
pub const InitOptions = struct {
                        ^~~~~~
referenced by:
    runValidate: tools\cli\commands\config.zig:142:49
    run: tools\cli\commands\config.zig:30:24
    6 reference(s) hidden; use '-freference-trace=8' to see all references
src\tasks\persistence.zig:111:55: error: missing struct field: environ
    var io_backend = std.Io.Threaded.init(allocator, .{});
                                                     ~^~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\Io\Threaded.zig:1188:25: note: struct declared here
pub const InitOptions = struct {
                        ^~~~~~
src\tasks\persistence.zig:151:55: error: missing struct field: environ
    var io_backend = std.Io.Threaded.init(allocator, .{});
                                                     ~^~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\Io\Threaded.zig:1188:25: note: struct declared here
pub const InitOptions = struct {
                        ^~~~~~
error: 3 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2223+4f16e80ce\\zig.exe" build-exe -OReleaseFast --dep abi --dep cli "-Mroot=C:\\Users\\donald\\abi\\tools\\cli\\main.zig" -ODebug --dep build_options "-Mabi=C:\\Users\\donald\\abi\\src\\abi.zig" -ODebug --dep abi "-Mcli=C:\\Users\\donald\\abi\\tools\\cli\\mod.zig" "-Mbuild_options=.zig-cache\\c\\c290e6efef1f57036e2411bdad41ddea\\options.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name abi-profile --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2223+4f16e80ce\\lib\\" --listen=-

Build Summary: 30/35 steps succeeded (2 failed)
install transitive failure
+- install abi transitive failure
|  +- compile exe abi Debug native 3 errors
+- install abi-profile transitive failure
   +- compile exe abi-profile ReleaseFast native 3 errors

error: the following build command failed with exit code 1:
.zig-cache\o\bb8120b099056445f584a00d6255efb5\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib C:\Users\donald\abi .zig-cache C:\Users\donald\AppData\Local\zig --seed 0xd53d3772 -Zc89176dae8b96632 -Denable-gpu=true -Denable-web=true -Denable-network=true -Denable-profiling=true
